html category route and delete functionality

--- a/views/events.handlebars
+++ b/views/events.handlebars
@@ -6,8 +6,11 @@
      <p>Event Link: {{dataValues.eventLink}} </p>
       <p>Description: {{dataValues.description}}  </p>
       <p>Location: {{dataValues.location}} </p>
+      <button data-id="{{this.id}}" class="delevent">Delete</button>
     </li>
   {{/each}}
 </ul>
+
+ 
 
 <script type="text/javascript" src="js/eventsclient.js"></script>
