--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -13,8 +13,7 @@ h2 {
   color: #f55f44;
 }
 
-.item-a {
-  justify-self: center;
+.item-a {  
   margin: 15px 30px 0 30px;
   background-color: #efefef;
   color: #535461;
@@ -23,11 +22,16 @@ h2 {
   box-shadow: -2px -2px 5px rgba(255, 255, 255, 1),
     3px 3px 5px rgba(0, 0, 0, 0.1);
 }
+/* .item-b {
+  justify-self: center;
+  grid-area: picture;
+} */
 
 .container {
   display: grid;
-  grid-template-columns: repeat(auto, minmax(500px, 1fr));
-  grid-template-rows: 25%;
+  align-content: center;
+  grid-template-columns: 50%, auto, 50%;
+  grid-template-rows: 40%;
   grid-template-areas: ". . .", ". form .", ". . .";
 }
 
