updated buildevent link

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -20,7 +20,7 @@ and gives them the option to add new events  --}}
   </div> --}}
 {{!-- 
 add a link to add events form--}}
-<button  class="addevent">Add New Event</button>
+<a href="buildEvent.html">Add New Event</a>
 ||
 <a href="events">View all events</a>
 
