--- a/public/stylesheets/buildEvent.css
+++ b/public/stylesheets/buildEvent.css
@@ -18,17 +18,25 @@ body {
     transform: translateY(-50%);
     width: 100%;
     padding: 0 20px;
+    transition: 150ms ease-in-out;
 }
 
+
 .event-form {
-    max-width: 550px;
-    margin: 0 auto;
-    background-color: #efefef;
-    padding: 30px;
-    border-radius: 20px;
-    display: flex;
-    box-shadow: -2px -2px 5px rgba(255, 255, 255, 1),
-      3px 3px 5px rgba(0, 0, 0, 0.1);
+  max-width: 550px;
+  margin: 0 auto;
+  background-color: #efefef;
+  padding: 30px;
+  border-radius: 20px;
+  display: flex;
+  box-shadow: -2px -2px 5px rgba(255, 255, 255, 1),
+  3px 3px 5px rgba(0, 0, 0, 0.1);
+}
+
+.event-form:hover {
+  transform: scale(1.05);
+  box-shadow: -4px -4px 7px rgba(255, 255, 255, 1),
+  5px 5px 7px rgba(0, 0, 0, 0.1);
 }
 
 .input-fields {
