--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -44,8 +44,8 @@
 				<div class="nav-wrapper">
 					<nav>
 						<a href="/">Home</a><br>
-						{{!-- <a href="#">Saved</a><br> --}}
-						<a href="#">About</a><br>
+						<a href="login.html">Login</a><br>
+						<a href="https://github.com/Dorinetk/eventplanner">About</a><br>
 					</nav>
 				</div>
 			</div>
