--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,10 +25,10 @@
 						fill="#efefef" />
 				</svg></button>
 			<div class="dropdown-content">
-				<a href="events/category/music">Music</a>
-				<a href="events/category/sports">Sports</a>
-				<a href="events/category/arts">Arts</a>
-				<a href="events/category/education">Education</a>
+				<a href="music">Music</a>
+				<a href="sports">Sports</a>
+				<a href="arts">Arts</a>
+				<a href="education">Education</a>
 			</div>
 		</div>
 
