--- a/views/events.handlebars
+++ b/views/events.handlebars
@@ -16,8 +16,9 @@
     <div id="location">Location:  {{dataValues.location}}</div>
     <div id="link"><a href="{{dataValues.eventLink}}">Click for More information </a></div>
     {{!-- to display the name from users table --}}
-    <div id="userUpload">Posted by: {{dataValues.UserId}}</div>
+    {{!-- <div id="userUpload">Posted by: {{dataValues.UserId}}</div> --}}
     {{!-- <a href="#" class="button">Save!</a> --}}
+    <br>
     <br>
 
   </div>
