--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -42,8 +42,9 @@ add a link to add events form--}}
     <div id="location">Location:  {{dataValues.location}}</div>
     <div id="link"><a href="{{dataValues.eventLink}}">Click for More information </a></div>
     {{!-- to display the name from users table --}}
-    <div id="userUpload">Posted by: {{dataValues.UserId}}</div>
+    {{!-- <div id="userUpload">Posted by: {{dataValues.UserId}}</div> --}}
      <a href="#" class="button">Delete</a> 
+    <br>
     <br>
 
   </div>
