--- a/views/music.handlebars
+++ b/views/music.handlebars
@@ -21,8 +21,9 @@
     <div id="location">Location:  {{dataValues.location}}</div>
     <div id="link"><a href="{{dataValues.eventLink}}" target="_blank">Click for More information </a></div>
     {{!-- to display the name from users table --}}
-    <div id="userUpload">Posted by: {{dataValues.UserId}}</div>
+    {{!-- <div id="userUpload">Posted by: {{dataValues.UserId}}</div> --}}
     {{!-- <a href="#" class="button">Save!</a> --}}
+    <br>
     <br>
 
   </div>
