--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -20,9 +20,8 @@ and gives them the option to add new events  --}}
   </div> --}}
 {{!-- 
 add a link to add events form--}}
-<a href="buildEvent.html">Add New Event</a>
-||
-<a href="events">View all events</a>
+<a class="button" href="buildEvent.html">Add New Event</a>
+<a class="button" href="events">View all events</a>
 </br>
 </br>
 
