--- a/public/stylesheets/buildEvent.css
+++ b/public/stylesheets/buildEvent.css
@@ -77,7 +77,7 @@ body {
     color: #535461;
 }
 
-.btn {
+.button {
     background-color: #efefef;
     border: none;
     color: #535461;
@@ -96,7 +96,7 @@ body {
     transition: 100ms ease-in-out;
   }
   
-  .btn:hover {
+  .button:hover {
     /* background-color: #3AD29F;
       text-decoration: none;
       color: #ffffff;
